@@ -1,3 +1,9 @@
+2006-10-20  Reinhard Max  <max@tclers.tk>
+
+	* unix/configure.in: Added autodetection for OS-supplied timezone
+	* unix/Makefile.in:  files and configure switches to override the
+	* unix/configure:    detected default.
+	
 2006-10-18  Don Porter  <dgp@users.sourceforge.net>
 
 	*** 8.5a5 TAGGED FOR RELEASE ***
